# orcha-writer

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml
.codegraph/: daemon.pid
.github/workflows/: release.yml
scripts/: sync-version.mjs
src/: App.css  App.tsx  AppContext.tsx  codeThemes.ts  commands.ts  i18n.ts  index.css  main.tsx  previewThemes.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: router.tsx
src/app/layouts/: MainLayout.tsx  SettingsApplier.tsx  SettingsLayout.tsx
src/components/: CommandPalette.tsx  Editor.tsx  FilePreview.tsx  GlobalContextMenu.tsx  GlobalFileSearch.tsx  MenuBar.tsx  Outline.tsx  PdfExportDialog.tsx  Preview.tsx  SearchPanel.tsx  SettingsModal.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  TerminalPanel.tsx  Toolbar.tsx
src/config/: index.ts  paths.ts
src/modules/ai-chat/: index.ts  styles.css
src/modules/ai-chat/components/: AIChatHeader.tsx  AIChatPanel.tsx  AIInputBox.tsx  AgentSelector.tsx  ContextBox.tsx  DiffCard.tsx  MessageBubble.tsx  MessageList.tsx  ResultCard.tsx  SelectionAIPopover.tsx  ShortcutCommandBar.tsx
src/modules/ai-chat/constants/: builtinAgents.ts  (+1 more)
src/modules/block-editor/: index.ts
src/pages/workspace/: WorkspacePage.tsx
src/store/: aiStore.ts  appStore.ts  index.ts  pluginStore.ts  settingsStore.ts  shortcutStore.ts  updateStore.ts
src/styles/: code-themes.css  preview-themes.css
src/utils/: documentCapabilities.ts  dragState.ts  exportMarkdown.ts  fileSearch.ts  fs.ts  keyboardShortcuts.ts  markdownImagePaste.ts  markdownImages.ts  mermaid.ts  openFileInEditor.ts  pdfExport.ts  savePaths.ts  unsavedTabs.ts  update.ts  updateUi.tsx  workspace.ts
(+31 files in other folders)
