[package]
name = "orcha-writer"
version = "0.1.14"
edition = "2024"
license = "MIT"
repository = "https://github.com/orcha-ai/orcha-writer"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "native-tls"] }
pdf-extract = "0.9"
portable-pty = "0.9.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSPasteboard", "NSPasteboardItem"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSData", "NSString", "NSArray", "NSObject"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
